[ci skip] use multioutput wrapper + scorer tweaks aa12100f03156a07dda20697c343559fe07b4915

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32867ac3",
+   "id": "dcd27ef0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1410ba0",
+   "id": "8a579476",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4071c548",
+   "id": "c1614d4f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6407f4c",
+   "id": "cba31907",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "887f64ed",
+   "id": "939bb87a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f79cc6",
+   "id": "ab56a8ca",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb91126",
+   "id": "116cd24d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293665e0",
+   "id": "8f631a63",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a737d1c",
+   "id": "e82d2886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd4edfe",
+   "id": "4e6dc969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "745ec41f",
+   "id": "d39e7167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b12fa889",
+   "id": "1c6c13c1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da4f86c3",
+   "id": "9346ee66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e4f31ad",
+   "id": "c0157a58",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de444e48",
+   "id": "a67e17ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5f2de3e",
+   "id": "44e4632a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c7d83ea",
+   "id": "117cd54f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e4ed597",
+   "id": "f608b4f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96d6d3ea",
+   "id": "25135597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50df5c7e",
+   "id": "22be19cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4294a2c6",
+   "id": "ca93008e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0ac4508",
+   "id": "6f5d2a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b687e1a5",
+   "id": "679af223",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63822f4a",
+   "id": "62226a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a40f3f",
+   "id": "984f1051",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "026af30e",
+   "id": "f0f4e1fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c697f21",
+   "id": "2033b31a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b07078e",
+   "id": "1e2cd637",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abc15edd",
+   "id": "d422748b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720c92fa",
+   "id": "bda24843",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3cca92b",
+   "id": "cc21f341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae0f3019",
+   "id": "56d2f18a",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9618bfcb",
+   "id": "21398c5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc296792",
+   "id": "08798df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed49ab8",
+   "id": "99e741ae",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50fef72a",
+   "id": "930eefc2",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffcf7579",
+   "id": "b9c51739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ca3f96",
+   "id": "f3fcd01d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,11 +679,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c68148b2",
+   "id": "572439b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
+    "horizons = range(1, 3)  # Forecasting horizons from 1 to 24 hours\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
     "targets = prediction_time.join(\n",
@@ -703,11 +703,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "664ff2a1",
+   "id": "1dfe0cbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizon_of_interest = 12\n",
+    "horizon_of_interest = 2\n",
     "target_column_name = target_column_name_pattern.format(horizon=horizon_of_interest)\n",
     "predicted_target_column_name = \"predicted_\" + target_column_name\n",
     "target = targets[target_column_name].skb.mark_as_y()"
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54646c06",
+   "id": "2ff3154e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c09c562",
+   "id": "a68e8660",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08277495",
+   "id": "336dce7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b3a6b4",
+   "id": "9c3d3bee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec30e1ca",
+   "id": "d3613146",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "615b13ba",
+   "id": "70cfb740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b43a8b",
+   "id": "e0d749db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5691b3a5",
+   "id": "57eb9f70",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78afab04",
+   "id": "c0729b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8d6d00",
+   "id": "9fa297d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a051952",
+   "id": "0eba6707",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -957,10 +957,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfef9af",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "ea28f0d7",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# nested_cv_results = skrub.cross_validate(\n",
@@ -976,6 +974,89 @@
     "# ).round(3)\n",
     "# nested_cv_results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25ec9a9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = targets.skb.drop(cols=[\"load_mw\"]).skb.mark_as_y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccf12ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.multioutput import MultiOutputRegressor\n",
+    "\n",
+    "model = MultiOutputRegressor(\n",
+    "    estimator=HistGradientBoostingRegressor(\n",
+    "        random_state=0,\n",
+    "        learning_rate=skrub.choose_float(\n",
+    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
+    "        ),\n",
+    "    ),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66710dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = features.skb.apply(model, y=targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cc77bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "\n",
+    "def multioutput_scorer(regressor, X, y, score_func, score_name):\n",
+    "    y_pred = regressor.predict(X)\n",
+    "    return {\n",
+    "        f\"{score_name}_horizon_{h}h\": score\n",
+    "        for h, score in enumerate(\n",
+    "            score_func(y, y_pred, multioutput=\"raw_values\"), start=1\n",
+    "        )\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def scoring(regressor, X, y):\n",
+    "    return {\n",
+    "        **multioutput_scorer(regressor, X, y, mean_absolute_percentage_error, \"mape\"),\n",
+    "        **multioutput_scorer(regressor, X, y, r2_score, \"r2\"),\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "predictions.skb.cross_validate(\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring=scoring,\n",
+    "    return_train_score=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c49c4e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
