--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6779989e",
+   "id": "05a500b6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e60918a5",
+   "id": "c4796d00",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad187da",
+   "id": "a1847e44",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2cf3f9",
+   "id": "ee018c5b",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d816747",
+   "id": "b9df63d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888e88e8",
+   "id": "aef113e5",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a236d4",
+   "id": "32e359fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f906455c",
+   "id": "b5b0e829",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "352df5da",
+   "id": "6aa36440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1fb4923",
+   "id": "fdf5bef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce43b552",
+   "id": "7f39e4a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5487b087",
+   "id": "9ed0b26d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4c6ac0",
+   "id": "0b1fb031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234b2a11",
+   "id": "180ddd39",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47a7431e",
+   "id": "81d61d5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8733b6de",
+   "id": "63920538",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b624c45",
+   "id": "e2673436",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9e473e",
+   "id": "52df8447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f83471b8",
+   "id": "2669c4d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bb0d8e",
+   "id": "f36abf8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c97b9ba8",
+   "id": "ffcfab0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06fb0138",
+   "id": "6852797d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a388dd",
+   "id": "eb13980c",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d468fa81",
+   "id": "d0fa99e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ddc2c9",
+   "id": "7095e56b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e64ba1",
+   "id": "e6640556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57013988",
+   "id": "5c4bd650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cdce1de",
+   "id": "6a4bca9a",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71846658",
+   "id": "33a8fc69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2243185f",
+   "id": "d033250d",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52224890",
+   "id": "d54e0543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3a2c58b",
+   "id": "e7919e66",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e68a2bf",
+   "id": "c5818637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f9160a",
+   "id": "9ae0f110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e35985df",
+   "id": "bab86f29",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87727fb3",
+   "id": "4a8fc337",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c6d3238",
+   "id": "a1445b68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1a3370",
+   "id": "5c010b89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,11 +679,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf73385",
+   "id": "4005576c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
+    "horizons = range(1, 3)  # Forecasting horizons from 1 to 24 hours\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
     "targets = prediction_time.join(\n",
@@ -703,11 +703,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "519c1d5e",
+   "id": "f2ea8c51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizon_of_interest = 12\n",
+    "horizon_of_interest = 2\n",
     "target_column_name = target_column_name_pattern.format(horizon=horizon_of_interest)\n",
     "predicted_target_column_name = \"predicted_\" + target_column_name\n",
     "target = targets[target_column_name].skb.mark_as_y()"
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06e5f66",
+   "id": "0970740d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "291dde6e",
+   "id": "d5e17d34",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de9ff711",
+   "id": "fde11d6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366c4df4",
+   "id": "934808d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28c7838",
+   "id": "5bfe177e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "501bccdb",
+   "id": "03d887f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a7ef5aa",
+   "id": "21a70d05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5271ad7b",
+   "id": "f9f3f8c8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ccd455",
+   "id": "b09f523f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9281096",
+   "id": "5cdd498f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adaf2019",
+   "id": "3d99280e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -957,10 +957,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "301132ad",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "febb1610",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# nested_cv_results = skrub.cross_validate(\n",
@@ -976,6 +974,89 @@
     "# ).round(3)\n",
     "# nested_cv_results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83aa38a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = targets.skb.drop(cols=[\"load_mw\"]).skb.mark_as_y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9e7fd6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.multioutput import MultiOutputRegressor\n",
+    "\n",
+    "model = MultiOutputRegressor(\n",
+    "    estimator=HistGradientBoostingRegressor(\n",
+    "        random_state=0,\n",
+    "        learning_rate=skrub.choose_float(\n",
+    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
+    "        ),\n",
+    "    ),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "693de54b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = features.skb.apply(model, y=targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31f6567f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "\n",
+    "def multioutput_scorer(regressor, X, y, score_func, score_name):\n",
+    "    y_pred = regressor.predict(X)\n",
+    "    return {\n",
+    "        f\"{score_name}_horizon_{h}h\": score\n",
+    "        for h, score in enumerate(\n",
+    "            score_func(y, y_pred, multioutput=\"raw_values\"), start=1\n",
+    "        )\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def scoring(regressor, X, y):\n",
+    "    return {\n",
+    "        **multioutput_scorer(regressor, X, y, mean_absolute_percentage_error, \"mape\"),\n",
+    "        **multioutput_scorer(regressor, X, y, r2_score, \"r2\"),\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "predictions.skb.cross_validate(\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring=scoring,\n",
+    "    return_train_score=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16c5dac6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
